# norgolith

./: .envrc  .gitignore  .release-please-manifest.json  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  build.zig  build.zig.zon  flake.nix  index.html  mprocs.yaml  norgolith.toml  release-please-config.json  release-plz.toml  roadmap.norg  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  format.yml  lint.yml  release-please.yml  release-plz.yml  release.yml  test.yml  update-flake.yml
assets/: style.css
content/: index.norg
content/docs/: commands.norg  configuration.norg  getting-started.norg  index.norg  installation.norg  templating.norg  theming.norg
core/: CHANGELOG.md  Cargo.toml  build.rs
core/src/: cache.rs  fs.rs  net.rs  tera_functions.rs
core/src/cmd/: build.rs  dev.rs  init.rs  mod.rs  new.rs  plugin.rs  preview.rs  seo.rs
core/src/config/: mod.rs
core/src/converter/: html.rs  mod.rs
core/src/plugin/: ffi.rs  manifest.rs  mod.rs  sandbox.rs
core/src/resources/assets/: livereload.js  style.css
core/src/resources/templates/: 404.html  500.html  base.html  categories.html  category.html
core/src/schema/: mod.rs  validator.rs
core/src/shared/: mod.rs
core/tests/plugins/: test_abort.c  test_error.c  test_null.c  test_ok.c  test_timeout.c
core/tests/plugins/test_sdk_plugin/: Cargo.toml
core/tests/plugins/test_sdk_plugin/src/: lib.rs
doc/: themes.norg
docs/: .envrc  README.md  index.html  norgolith.toml
docs/commands/: index.html
docs/configuration/: index.html
docs/content/: index.norg
docs/content/docs/: configuration.norg  content-schemas.norg  contributing.norg  getting-started.norg  plugins.norg
docs/contributing/: index.html
docs/getting-started/: index.html
docs/theme/: .metadata.toml  README.md
docs/theme/assets/css/: prism-sweetie.min.css  styles.min.css
docs/theme/templates/: base.html  category.html  home.html  posts.html
docs/theme/templates/partials/: footer.html  nav.html
public/: index.html  rss.xml
public/assets/: style.css
public/assets/css/: tailwind.css
public/categories/: index.html
public/docs/: index.html
public/docs/commands/: index.html
public/docs/configuration/: index.html
public/docs/content-schemas/: index.html
public/docs/contributing/: index.html
public/docs/getting-started/: index.html
public/docs/installation/: index.html
public/docs/templating/: index.html
public/docs/theming/: index.html
res/: README.md
scripts/: update-robots-presets.sh
sdk/: CHANGELOG.md  Cargo.toml  README.md
sdk/src/: lib.rs
src/: cache.rs  cli.rs  config.rs  converter.rs  fs.rs  main.rs  net.rs  tera_functions.rs  theme.rs
src/cmd/: build.rs  dev.rs  init.rs  mod.rs  new.rs  plugin.rs  preview.rs  seo.rs  serve.rs  theme.rs
src/config/: commands.rs  mod.rs
src/converter/: html.rs  meta.rs
src/plugin/: ffi.rs  mod.rs  sandbox.rs
src/resources/assets/: style.css
src/resources/content/: index.norg
src/resources/templates/: base.html  categories.html  default.html  rss.xml
src/schema/: mod.rs  validator.rs
src/shared/: mod.rs
src/templates/: base.html
templates/: base.html  default.html  docs.html
theme/: .metadata.toml  README.md  theme.toml
theme/assets/css/: prism-sweetie.min.css  styles.min.css  tailwind.css
theme/templates/: base.html  categories.html  category.html  default.html  home.html  post.html  posts.html
theme/templates/partials/: footer.html  nav.html
