[package]
name = "norgolith"
version = "0.1.0"
edition = "2021"
authors = ["NTBBloodbath <bloodbathalchemist@protonmail.com"]
license = "GPL-2.0"
readme = "README.md"
description = "The monolithic Norg static site generator"
repository = "https://github.com/NTBBloodbath/norgolith"
keywords = ["static", "site", "generator", "blog", "norg"]

include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["deprecated", "derive", "env", "wrap_help"] }
comfy-table = "7.1.3"
eyre = "0.6.12"
hyper = { version = "=0.14.28", features = ["runtime", "server", "http1", "http2"] }
tera = "1.20.0"
tokio = { version = "1.43.0", features = ["fs", "time", "rt-multi-thread", "macros", "process"] }
toml = "0.8.19"
rust-norg = { git = "https://github.com/nvim-neorg/rust-norg", branch = "main" }
whoami = "1.5.2"
open = "5.3.2"
indoc = "2.0.5"
html-escape = "0.2.13"
notify = "8.0.0"

[profile.optimized]   # Size optimizations that will hurt build speed
inherits = "release"  # Which profile we inherit
opt-level = "z"       # Optimize for size
codegen-units = 1     # Build speed -> Executable size
strip = true          # Remove debug symbols

[dev-dependencies]
mockall = "0.13.1"

[features]
ci = []               # Used to ignore certain tests on GitHub CIs
