[package]
name = "norgolith"
version = "0.2.0"
edition = "2021"
authors = ["NTBBloodbath <bloodbathalchemist@protonmail.com"]
license = "GPL-2.0"
readme = "README.md"
description = "The monolithic Norg static site generator"
repository = "https://github.com/NTBBloodbath/norgolith"
keywords = ["static", "site", "generator", "blog", "norg"]

include = ["src/**/*", "LICENSE", "README.md"]

[[bin]]
name = "lith"
path = "src/main.rs"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["deprecated", "derive", "env", "wrap_help"] }
comfy-table = "7.1.3"
eyre = "0.6.12"
hyper = { version = "=0.14.28", features = ["runtime", "server", "http1", "http2"] }
tera = "1.20.0"
tokio = { version = "1.43.0", features = ["fs", "time", "rt-multi-thread", "macros", "process"] }
toml = "0.8.19"
rust-norg = { git = "https://github.com/nvim-neorg/rust-norg", branch = "main" }
whoami = "1.5.2"
open = "5.3.2"
indoc = "2.0.5"
html-escape = "0.2.13"
notify = "8.0.0"
notify-debouncer-full = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
mime_guess = "2.0.5"
tokio-tungstenite = "0.26.1"
futures-util = { version = "0.3.31", features = ["sink"] }
walkdir = "2.5.0"
minify-html = "0.15.0"
num_cpus = "1.16.0"
minify-js = "0.6.0"
css-minify = "0.5.2"
regex = "1.11.1"
semver = { version = "1.0.25", features = ["serde"] }
git2 = "0.20.0"
tempfile = "3.17.1"
inquire = { version = "0.7.5", features = ["chrono", "date"] }

[dev-dependencies]
mockall = "0.13.1"

[features]
ci = []               # Used to ignore certain tests on GitHub CIs
